fixed component overlap in movile view

--- a/Frontend/share_big_files/src/views/pricingtable.css
+++ b/Frontend/share_big_files/src/views/pricingtable.css
@@ -11,7 +11,7 @@ h1 a {
 .price-table-wrapper {
   font-family: "Lato", sans-serif;
   text-align: center;
-  margin-top: 30px;
+  
 }
 .price-table-wrapper .featured-table {
   box-shadow: 0px 0px 19px -3px rgba(0, 0, 0, 0.36);
@@ -110,10 +110,11 @@ MEET THE TEAM SECTION
 */
 
 #cubeContainer {
-  height: 100vh;
+  height: fit-content;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 50px;
 }
 #cubeWrapper {
   width: 650px;
